# Data_Science_Project

./: .gitignore  DSC_Python_Implementation.py  DSC_Python_Replication.py  DS_Python_Project.code-workspace  DS_Python_Project.toml  DS_Python_pyproject.toml  README.md  config.py  pyproject.toml  requirements.txt
Implementation/: README.md  README_Implementation.md  pyproject.toml  requirements.txt  test_csd_report.html
Implementation/src/: __init__.py  __main__.py  add_to_report.py  config.py  report.py
Implementation/src/analyses/: __init__.py  compute_csd.py  tfr_psd_analyses.py
Implementation/src/mat_to_epochs_conversion/: __init__.py  combine_epochs.py  convert_main_funcs.py  create_events_for_epochs.py  create_info.py  extract_from_dict.py  remove_oddball_trials.py
Implementation/tests/: __init__.py  input_validation.py  input_validation_tests.py  output_tests.py  test_csd.py  test_main.py
Replication/: README_Replication.md  plot_replicated_files.py  pyproject.toml  replication_config.py
Replication/src/: main.py  plot_replicated_files.py  replication_config.py
Replication/tests/: conftest.py  test_plot_connectivity_contrast.py  test_plot_csd_matrices.py  test_plot_forward_model.py  test_plot_grandavg_power.py  test_plot_source_space.py
