[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Implementation"
version = "1.0"
requires-python = ">=3.11.0"
description = "Converts mat files containing epoched meg data and analyses it: CSD, PSD, TFR, topoplots"
readme = "README.md"

dependencies = [
"beartype == 0.19.0",
"certifi>=2024.12.14",
"charset-normalizer>=3.4.1",
"colorama>=0.4.6",
"contourpy>=1.3.1",
"cycler>=0.12.1",
"decorator>=5.1.1",
"fonttools>=4.55.3",
"h5py>=3.12.1",
"h5io==0.2.4",
"idna>=3.10",
"iniconfig>=2.0.0",
"Jinja2>=3.1.5",
"kiwisolver>=1.4.8",
"lazy_loader>=0.4",
"MarkupSafe>=3.0.2",
"matplotlib>=3.10.0",
"mne>=1.9.0",
"numpy>=2.2.1",
"packaging>=24.2",
"pillow>=11.1.0",
"platformdirs>=4.3.6",
"pluggy>=1.5.0",
"pooch>=1.8.2",
"pymatreader>=1.0.0",
"pyparsing>=3.2.1",
"pytest>=8.3.4",
"python-dateutil>=2.9.0.post0",
"requests>=2.32.3",
"scipy>=1.15.1",
"six>=1.17.0",
"tqdm>=4.67.1",
"urllib3>=2.3.0",
"xmltodict>=0.14.2"
]

[project.optional-dependencies]
dev = [
    "Implementation[lint]",
    "Implementation[build]"
]
lint = [
    "ruff",
]

build = [
    "build>=1.2.2",
]

[tool.ruff]
target-version = ["py311", "py312", "py313"]
exclude = [
    "my-project-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
]

[tool.ruff.lint]
line-length = 50
